--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-foundation": "^0.9.7",
     "react-hook-form": "^7.31.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
@@ -39,7 +43,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24"
+    "postcss": "^8.4.14"
   }
 }
