--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "discord-webhook-node": "^1.1.8",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16"
   }
 }
