--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,18 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
-    "react-foundation": "^0.9.7",
+    "react-foundation": "^0.9.2",
     "react-hook-form": "^7.31.3",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
