--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,22 @@ react-ticket-client.tar
 react-ticket-server.tar
 server/.env
 .env
+client/build/asset-manifest.json
+client/build/favicon.ico
+client/build/index.html
+client/build/logo192.png
+client/build/logo512.png
+client/build/manifest.json
+client/build/precache-manifest.21b2f51a721fd096b1775e77809e80a0.js
+client/build/robots.txt
+client/build/service-worker.js
+client/build/static/css/1.4baba824.chunk.css
+client/build/static/css/1.4baba824.chunk.css.map
+client/build/static/css/main.fe407c0d.chunk.css
+client/build/static/css/main.fe407c0d.chunk.css.map
+client/build/static/js/1.253ea34d.chunk.js
+client/build/static/js/1.253ea34d.chunk.js.map
+client/build/static/js/main.f25eeb49.chunk.js
+client/build/static/js/main.f25eeb49.chunk.js.map
+client/build/static/js/runtime~main.229c360f.js
+client/build/static/js/runtime~main.229c360f.js.map
