--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start NODE_OPTIONS=--openssl-legacy-provider ",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "start": "react-scripts start NODE_OPTIONS=--openssl-legacy-provider",
+    "build": "react-scripts build NODE_OPTIONS=--openssl-legacy-provider",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
