--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ client/build/static/js/runtime~main.229c360f.js
 client/build/static/js/runtime~main.229c360f.js.map
 server/ssl/emilzackrisson.tk.crt
 server/ssl/emilzackrisson.tk.key
+server/ssl/emilzackrisson.se.crt
+server/ssl/emilzackrisson.se.key
