--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build Docker client image
-      run: docker build ./client --file dockerfile --tag react-ticket-client:latest
+      run: docker build client --file dockerfile --tag react-ticket-client:latest
       
     - name: Build Docker server image
-      run: docker build ./server --file dockerfile --tag react-ticket-server:latest
+      run: docker build server --file dockerfile --tag react-ticket-server:latest
