--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build Docker client image
-      run: docker build client --file . --tag react-ticket-client:latest
+      run: docker build -t react-ticket-client:latest .\client
       
     - name: Build Docker server image
-      run: docker build server --file . --tag react-ticket-server:latest
+      run: docker build -t react-ticket-server:latest .\server
