--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "react": "^18.1.0",
+    "react-autolink-text2": "^3.3.0",
     "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
