--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,12 @@
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "react": "^18.1.0",
-    "react-autolink-text2": "^3.3.0",
     "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-foundation": "^0.9.2",
     "react-hook-form": "^7.31.3",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.8",
     "web-vitals": "^2.1.4"
