--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,14 @@ server/ssl/emilzackrisson.tk.crt
 server/ssl/emilzackrisson.tk.key
 server/ssl/emilzackrisson.se.crt
 server/ssl/emilzackrisson.se.key
+client/build/precache-manifest.a38cfae93b8961d6d4705fa4eccf8a6c.js
+client/build/static/css/2.b8f764e9.chunk.css
+client/build/static/css/2.b8f764e9.chunk.css.map
+client/build/static/css/main.83ea3097.chunk.css
+client/build/static/css/main.83ea3097.chunk.css.map
+client/build/static/js/2.26c6243d.chunk.js
+client/build/static/js/2.26c6243d.chunk.js.map
+client/build/static/js/main.18392532.chunk.js
+client/build/static/js/main.18392532.chunk.js.map
+client/build/static/js/runtime~main.a8a9905a.js
+client/build/static/js/runtime~main.a8a9905a.js.map
