--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,8 +1,21 @@
-FROM node:lts-alpine
-WORKDIR /app
-COPY package.json ./
-COPY package-lock.json ./
-COPY ./ ./
-RUN npm i
-EXPOSE 3000
-CMD ["npm", "run", "start"]
+# FROM node:lts-alpine
+# WORKDIR /app
+# COPY package.json ./
+# COPY package-lock.json ./
+# COPY ./ ./
+# RUN npm i
+# EXPOSE 3000
+# CMD ["npm", "run", "start"]
+
+FROM node:14.9.0 AS build-step
+
+WORKDIR /build
+COPY package.json package-lock.json ./
+RUN npm install
+
+COPY . .
+RUN npm run build
+
+FROM nginx:1.18-alpine
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY --from=build-step /build/build /frontend/build
