--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,8 +1,8 @@
-user  nginx;
-worker_processes  1;
-events {
-  worker_connections  1024;
-}
+# user nginx;
+# worker_processes auto;
+# events {
+#   worker_connections  1024;
+# }
 http {
   include /etc/nginx/mime.types;
   server {
