--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ client/build/static/js/main.18392532.chunk.js
 client/build/static/js/main.18392532.chunk.js.map
 client/build/static/js/runtime~main.a8a9905a.js
 client/build/static/js/runtime~main.a8a9905a.js.map
+client/src/settings.json
